--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3142,11 +3142,11 @@ nav {
 
 @media only screen and (min-width: 601px) {
   nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
-    height: 64px;
-    line-height: 64px; }
+    height: 128px;
+    line-height: 128px; }
 
   .navbar-fixed {
-    height: 64px; } }
+    height: 128px; } }
 @font-face {
   font-family: "Roboto";
   src: local(Roboto Thin), url("../fonts/roboto/Roboto-Thin.eot");
@@ -6161,5 +6161,23 @@ blockquote {
   padding-left: 1.5rem;
   border-left: 5px solid #ff6600;
   /* Just change the color value and that's it*/ }
+
+.brand-logo img {
+  /*5:4 ratio*/
+  height: 128px; }
+
+@media only screen and (max-width: 600px) {
+  .brand-logo img {
+    height: 56px; } }
+.secondary-nav {
+  background-color: #ff6600;
+  height: 56px; }
+
+.slider-form {
+  position: absolute;
+  bottom: 0;
+  z-index: 9999;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 100%; }
 
 /*# sourceMappingURL=materialize.css.map */
