--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 img.logo {
-  height: 64px;
+  height: 80px;
 }
 li.slide-image#slide-1 {
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('https://static.pexels.com/photos/34600/pexels-photo.jpg');
@@ -23,4 +23,11 @@ h1 {
 }
 .row {
   margin-bottom: 0;
+}
+
+h4 {
+  margin: 0;
+}
+h4.logo-text {
+  margin-left: 40px;
 }
