--- a/css/materialize.css
+++ b/css/materialize.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 .materialize-red {
   background-color: #e51c23 !important; }
 
@@ -6150,6 +6151,9 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 @media (min-height: 40.125em) {
   .picker--time .picker__box {
     margin-bottom: 5em; } }
+html {
+  font-family: 'Source Sans Pro', sans-serif; }
+
 section.content {
   background-color: #ff6600; }
 
@@ -6172,6 +6176,10 @@ blockquote {
 @media only screen and (max-width: 600px) {
   .brand-logo img {
     height: 56px; } }
+@media only screen and (max-width: 992px) {
+  h4.logo-text {
+    margin-left: 0;
+    text-align: center; } }
 .secondary-nav {
   background-color: #ff6600;
   height: 56px; }
